--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
            <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12">
              <div class="contents">
                <h2 class="head-title">CONSTRUÍMOS SOLUÇÕES INTELIGENTES</h2>
-               <p>Somos apaixoxonados por criar soluções de software online que buscam permanentemente gerar
-                 excelencia e valor para o seu negócio rumo ao sucesso sentido pelo seus clientes!</p>
+               <p>Somos apaixonados por criar soluções de software online que buscam permanentemente gerar excelência e
+                 valor para o seu negócio rumo ao sucesso sentido pelo seus clientes!</p>
                <div class="header-button">
                  <!--
                  <a href="#" class="btn btn-common">Download Now</i></a>
