--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
              <div class="services-content">
                <h3><a href="#">DESIGN DE APLICATIVOS UX/UI</a></h3>
                <p>O design de aplicativos para dispositivos móveis é muito mais do que efeitos visuais. É sobre o
-                 relacionamento entre o produto e o usuário. Enquanto trabalhamos em qualquer projeto da The App
-                 Solutions, pensamos principalmente no usuário final e em sua impressão do produto.
+                 relacionamento entre o produto e o usuário. Enquanto trabalhamos em qualquer projeto da Mapp.Company,
+                 pensamos principalmente no usuário final e em sua impressão do produto.
                </p>
              </div>
            </div>
