Versão com Link Site de Chamados e LineIcons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
    <!-- Icon -->
-   <link rel="stylesheet" href="assets/fonts/line-icons.css">
+   <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet">
+
    <!-- Owl carousel -->
    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
    <link rel="stylesheet" href="assets/css/owl.theme.css">
@@ -36,26 +37,31 @@
          <a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt=""></a>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-           <i class="lni-menu"></i>
+           <i class="lni lni-menu"></i>
          </button>
          <div class="collapse navbar-collapse" id="navbarCollapse">
            <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
              <li class="nav-item active">
                <a class="nav-link" href="#hero-area">
-                 Home
+                 Home <i class="lni lni-home"></i>
                </a>
              </li>
              <li class="nav-item">
                <a class="nav-link" href="#services">
-                 Serviços
+                 Serviços <i class="lni lni-briefcase"></i>
+               </a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link" href="https://mapp.freshdesk.com/">
+                 Suporte ao Cliente <i class="lni lni-consulting"></i>
                </a>
              </li>
              <!--
-             <li class="nav-item">
-               <a class="nav-link" href="#team">
-                 Team
-               </a>
-             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#team">
+                Team
+              </a>
+            </li>
              <li class="nav-item">
                <a class="nav-link" href="#pricing">
                  Pricing
@@ -69,7 +75,7 @@
             -->
              <li class="nav-item">
                <a class="nav-link" href="https://mapp-company.negocio.site/?m=true">
-                 Contato
+                 Contato <i class="lni lni-support"></i>
                </a>
              </li>
            </ul>
@@ -120,7 +126,7 @@
          <div class="col-md-6 col-lg-4 col-xs-12">
            <div class="services-item wow fadeInRight" data-wow-delay="0.3s">
              <div class="icon">
-               <i class="lni-cog"></i>
+               <i class="lni lni-cog"></i>
              </div>
              <div class="services-content">
                <h3><a href="#">Análise de negócio</a></h3>
@@ -135,7 +141,7 @@
          <div class="col-md-6 col-lg-4 col-xs-12">
            <div class="services-item wow fadeInRight" data-wow-delay="0.6s">
              <div class="icon">
-               <i class="lni-stats-up"></i>
+               <i class="lni lni-stats-up"></i>
              </div>
              <div class="services-content">
                <h3><a href="#">ESTRATÉGIA DE APLICATIVOS</a></h3>
@@ -152,10 +158,10 @@
          <div class="col-md-6 col-lg-4 col-xs-12">
            <div class="services-item wow fadeInRight" data-wow-delay="0.9s">
              <div class="icon">
-               <i class="lni-users"></i>
+               <i class="lni lni-consulting"></i>
              </div>
              <div class="services-content">
-               <h3><a href="#">SUPORTE CONTÍNUO</a></h3>
+               <h3><a href="https://mapp.freshdesk.com/">SUPORTE CONTÍNUO</a></h3>
                <p>Somos responsáveis ​​pela qualidade de todos os nossos produtos e buscamos a perfeição. Quando o
                  produto já é lançado e publicado nos mercados de aplicativos, oferecemos um suporte contínuo ao
                  desenvolvimento de aplicativos para nossos clientes.
@@ -167,7 +173,7 @@
          <div class="col-md-6 col-lg-4 col-xs-12">
            <div class="services-item wow fadeInRight" data-wow-delay="1.2s">
              <div class="icon">
-               <i class="lni-layers"></i>
+               <i class="lni lni-layers"></i>
              </div>
              <div class="services-content">
                <h3><a href="#">DESIGN DE APLICATIVOS UX/UI</a></h3>
@@ -182,7 +188,7 @@
          <div class="col-md-6 col-lg-4 col-xs-12">
            <div class="services-item wow fadeInRight" data-wow-delay="1.5s">
              <div class="icon">
-               <i class="lni-mobile"></i>
+               <i class="lni lni-mobile"></i>
              </div>
              <div class="services-content">
                <h3><a href="#">APLICATIVOS MÓVEIS</a></h3>
@@ -196,7 +202,7 @@
          <div class="col-md-6 col-lg-4 col-xs-12">
            <div class="services-item wow fadeInRight" data-wow-delay="1.8s">
              <div class="icon">
-               <i class="lni-rocket"></i>
+               <i class="lni lni-rocket"></i>
              </div>
              <div class="services-content">
                <h3><a href="#">PROTOTIPAGEM DE APLICATIVOS</a></h3>
@@ -254,7 +260,7 @@
            <div class="content-left">
              <div class="box-item wow fadeInLeft" data-wow-delay="0.3s">
                <span class="icon">
-                 <i class="lni-rocket"></i>
+                 <i class="lni lni-rocket"></i>
                </span>
                <div class="text">
                  <h4>Framwork7/Bootstrap Based</h4>
@@ -265,7 +271,7 @@
              </div>
              <div class="box-item wow fadeInLeft" data-wow-delay="0.6s">
                <span class="icon">
-                 <i class="lni-laptop-phone"></i>
+                 <i class="lni lni-laptop-phone"></i>
                </span>
                <div class="text">
                  <h4>Fully Responsive</h4>
@@ -276,7 +282,7 @@
              </div>
              <div class="box-item wow fadeInLeft" data-wow-delay="0.9s">
                <span class="icon">
-                 <i class="lni-cog"></i>
+                 <i class="lni lni-cog"></i>
                </span>
                <div class="text">
                  <h4>HTML5, CSS3 & SASS</h4>
@@ -297,7 +303,7 @@
            <div class="content-right">
              <div class="box-item wow fadeInRight" data-wow-delay="0.3s">
                <span class="icon">
-                 <i class="lni-leaf"></i>
+                 <i class="lni lni-layout"></i>
                </span>
                <div class="text">
                  <h4>Design Moderno</h4>
@@ -308,7 +314,7 @@
              </div>
              <div class="box-item wow fadeInRight" data-wow-delay="0.6s">
                <span class="icon">
-                 <i class="lni-layers"></i>
+                 <i class="lni lni-layers"></i>
                </span>
                <div class="text">
                  <h4>Modelos com Multipropósito</h4>
@@ -319,7 +325,7 @@
              </div>
              <div class="box-item wow fadeInRight" data-wow-delay="0.9s">
                <span class="icon">
-                 <i class="lni-leaf"></i>
+                 <i class="lni lni-leaf"></i>
                </span>
                <div class="text">
                  <h4>Escolhendo desenvolvedores</h4>
@@ -356,9 +362,9 @@
                </div>
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur.</p>
                <ul class="social-icons">
-                 <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
-                 <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
-                 <li><a href="#"><i class="lni-instagram-filled" aria-hidden="true"></i></a></li>
+                 <li><a href="#"><i class="lni lin-facebook-filled" aria-hidden="true"></i></a></li>
+                 <li><a href="#"><i class="lni lin-twitter-filled" aria-hidden="true"></i></a></li>
+                 <li><a href="#"><i class="lni lin-instagram-filled" aria-hidden="true"></i></a></li>
                </ul>
              </div>
            </div>
@@ -377,9 +383,9 @@
                </div>
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur.</p>
                <ul class="social-icons">
-                 <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
-                 <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
-                 <li><a href="#"><i class="lni-instagram-filled" aria-hidden="true"></i></a></li>
+                 <li><a href="#"><i class="lni lin-facebook-filled" aria-hidden="true"></i></a></li>
+                 <li><a href="#"><i class="lni lin-twitter-filled" aria-hidden="true"></i></a></li>
+                 <li><a href="#"><i class="lni lin-instagram-filled" aria-hidden="true"></i></a></li>
                </ul>
              </div>
            </div>
@@ -398,9 +404,9 @@
                </div>
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur.</p>
                <ul class="social-icons">
-                 <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
-                 <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
-                 <li><a href="#"><i class="lni-instagram-filled" aria-hidden="true"></i></a></li>
+                 <li><a href="#"><i class="lni lin-facebook-filled" aria-hidden="true"></i></a></li>
+                 <li><a href="#"><i class="lni lin-twitter-filled" aria-hidden="true"></i></a></li>
+                 <li><a href="#"><i class="lni lin-instagram-filled" aria-hidden="true"></i></a></li>
                </ul>
              </div>
            </div>
@@ -419,9 +425,9 @@
                </div>
                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur.</p>
                <ul class="social-icons">
-                 <li><a href="#"><i class="lni-facebook-filled" aria-hidden="true"></i></a></li>
-                 <li><a href="#"><i class="lni-twitter-filled" aria-hidden="true"></i></a></li>
-                 <li><a href="#"><i class="lni-instagram-filled" aria-hidden="true"></i></a></li>
+                 <li><a href="#"><i class="lni lin-facebook-filled" aria-hidden="true"></i></a></li>
+                 <li><a href="#"><i class="lni lin-twitter-filled" aria-hidden="true"></i></a></li>
+                 <li><a href="#"><i class="lni lin-instagram-filled" aria-hidden="true"></i></a></li>
                </ul>
              </div>
            </div>
@@ -444,7 +450,7 @@
          <div class="col-lg-4 col-md-6 col-xs-12">
            <div class="table wow fadeInLeft" data-wow-delay="1.2s">
              <div class="icon-box">
-               <i class="lni-package"></i>
+               <i class="lni lin-package"></i>
              </div>
              <div class="pricing-header">
                <p class="price-value">$10<span> /mo</span></p>
@@ -464,7 +470,7 @@
          <div class="col-lg-4 col-md-6 col-xs-12 active">
            <div class="table wow fadeInUp" id="active-tb" data-wow-delay="1.2s">
              <div class="icon-box">
-               <i class="lni-drop"></i>
+               <i class="lni lin-drop"></i>
              </div>
              <div class="pricing-header">
                <p class="price-value">$35<span> /mo</span></p>
@@ -484,7 +490,7 @@
          <div class="col-lg-4 col-md-6 col-xs-12">
            <div class="table wow fadeInRight" data-wow-delay="1.2s">
              <div class="icon-box">
-               <i class="lni-star"></i>
+               <i class="lni lin-star"></i>
              </div>
              <div class="pricing-header">
                <p class="price-value">$150<span> /mo</span></p>
@@ -525,11 +531,11 @@
                    <p class="description">Praesent cursus nulla non arcu tempor, ut egestas elit tempus. In ac ex
                      fermentum, gravida felis nec, tincidunt ligula.</p>
                    <div class="star-icon mt-3">
-                     <span><i class="lni-star-filled"></i></span>
-                     <span><i class="lni-star-filled"></i></span>
-                     <span><i class="lni-star-filled"></i></span>
-                     <span><i class="lni-star-filled"></i></span>
-                     <span><i class="lni-star-half"></i></span>
+                     <span><i class="lni lin-star-filled"></i></span>
+                     <span><i class="lni lin-star-filled"></i></span>
+                     <span><i class="lni lin-star-filled"></i></span>
+                     <span><i class="lni lin-star-filled"></i></span>
+                     <span><i class="lni lin-star-half"></i></span>
                    </div>
                  </div>
                </div>
@@ -547,11 +553,11 @@
                    <p class="description">Praesent cursus nulla non arcu tempor, ut egestas elit tempus. In ac ex
                      fermentum, gravida felis nec, tincidunt ligula.</p>
                    <div class="star-icon mt-3">
-                     <span><i class="lni-star-filled"></i></span>
-                     <span><i class="lni-star-filled"></i></span>
-                     <span><i class="lni-star-filled"></i></span>
-                     <span><i class="lni-star-half"></i></span>
-                     <span><i class="lni-star-half"></i></span>
+                     <span><i class="lni lin-star-filled"></i></span>
+                     <span><i class="lni lin-star-filled"></i></span>
+                     <span><i class="lni lin-star-filled"></i></span>
+                     <span><i class="lni lin-star-half"></i></span>
+                     <span><i class="lni lin-star-half"></i></span>
                    </div>
                  </div>
                </div>
@@ -569,11 +575,11 @@
                    <p class="description">Praesent cursus nulla non arcu tempor, ut egestas elit tempus. In ac ex
                      fermentum, gravida felis nec, tincidunt ligula.</p>
                    <div class="star-icon mt-3">
-                     <span><i class="lni-star-filled"></i></span>
-                     <span><i class="lni-star-filled"></i></span>
-                     <span><i class="lni-star-filled"></i></span>
-                     <span><i class="lni-star-filled"></i></span>
-                     <span><i class="lni-star-half"></i></span>
+                     <span><i class="lni lin-star-filled"></i></span>
+                     <span><i class="lni lin-star-filled"></i></span>
+                     <span><i class="lni lin-star-filled"></i></span>
+                     <span><i class="lni lin-star-filled"></i></span>
+                     <span><i class="lni lin-star-half"></i></span>
                    </div>
                  </div>
                </div>
@@ -591,11 +597,11 @@
                    <p class="description">Praesent cursus nulla non arcu tempor, ut egestas elit tempus. In ac ex
                      fermentum, gravida felis nec, tincidunt ligula.</p>
                    <div class="star-icon mt-3">
-                     <span><i class="lni-star-filled"></i></span>
-                     <span><i class="lni-star-filled"></i></span>
-                     <span><i class="lni-star-half"></i></span>
-                     <span><i class="lni-star-half"></i></span>
-                     <span><i class="lni-star-half"></i></span>
+                     <span><i class="lni lin-star-filled"></i></span>
+                     <span><i class="lni lin-star-filled"></i></span>
+                     <span><i class="lni lin-star-half"></i></span>
+                     <span><i class="lni lin-star-half"></i></span>
+                     <span><i class="lni lin-star-half"></i></span>
                    </div>
                  </div>
                </div>
@@ -700,10 +706,10 @@
                </div>
                <div class="social-icon">
                  <!--
-                             <a class="facebook" href="#"><i class="lni-facebook-filled"></i></a>
-                             <a class="twitter" href="#"><i class="lni-twitter-filled"></i></a>
-                             <a class="instagram" href="#"><i class="lni-instagram-filled"></i></a>
-                             <a class="linkedin" href="#"><i class="lni-linkedin-filled"></i></a>
+                             <a class="facebook" href="#"><i class="lni lin-facebook-filled"></i></a>
+                             <a class="twitter" href="#"><i class="lni lin-twitter-filled"></i></a>
+                             <a class="instagram" href="#"><i class="lni lin-instagram-filled"></i></a>
+                             <a class="linkedin" href="#"><i class="lni lin-linkedin-filled"></i></a>
                              -->
                </div>
              </div>
@@ -732,17 +738,15 @@
              <h3 class="footer-titel">Contato</h3>
              <ul class="address">
                <li>
-                 <a href="https://mapp-company.negocio.site/?m=true"><i class="lni-map-marker"></i> Av.
-                   Engenheiro Luís Carlos Berrini, 1748 <br> CJ
-                   1710 E 1 VG <br> CIDADE MONCOES <br>
+                 <a href="https://mapp-company.negocio.site/?m=true">
+                   <i class="lni lni-direction-alt"></i> Av.
+                   Eng Luís Carlos Berrini, 1748 <br> CJ
+                   1710 E 1 VG <br> CIDADE MONÇÕES <br>
                    São Paulo - SP, 04571-000</a>
                </li>
                <li>
-                 <a href="https://mapp-company.negocio.site/?m=true"><i class="lni-phone-handset"></i> Whatsapp: +55 19
-                   92001-3153</a>
-               </li>
-               <li>
-                 <a href="https://mapp-company.negocio.site/?m=true"><i class="lni-envelope"></i>Envie uma mensagem</a>
+                 <a href="https://mapp-company.negocio.site/?m=true"><i class="lni lni-envelope"></i>
+                   Envie uma mensagem</a>
                </li>
              </ul>
            </div>
@@ -767,7 +771,7 @@
 
    <!-- Go to Top Link -->
    <a href="#" class="back-to-top">
-     <i class="lni-arrow-up"></i>
+     <i class="lni lni-pointer-up"></i>
    </a>
 
    <!-- Preloader -->
